# InfLoop

./: CMakeLists.txt  README.md  imgui.ini  init.cpp  init.h  main.cpp
files/BitmapUncomp/: cut.py  header.py
files/TileUncomp/: analysis.py  cut.py  grid.html
files/disassembly_gen/: Renesas SH Instruction Set Summary.html  disasm.h  disassembly_gen.py
include/: flags.h  helpers.h
info/: Animeland.h  Animeland.md  AnimelandCasioTileMap  BIOS.md  BIOSStructs.h  DreamChase.md  IO.md  PPU.md  Video.md  memory_sections.h
src/Common/: disasm.h
src/Core/: CMakeLists.txt  system.cpp  system.h
src/Core/Memory/: CMakeLists.txt  InternalIO.h  MMIOBase.h  MMIOVRegs.cpp  MMIOVRegs.h  Mem.cpp  Mem.h  MemoryHelpers.h  VideoInterface.cpp  VideoInterface.h
src/Core/PPU/: CMakeLists.txt  DistinctColors.h  PPU.cpp  PPU.h
src/Core/SH7021/: BIOS.cpp  CMakeLists.txt  Instruction.h  Interpreter.cpp  Interpreter.h  SH7021.cpp  SH7021.h  Tables.cpp  Tables.h  important_stuff.txt
src/Core/SH7021/Instructions/: Arithmetic.cpp  Arithmetic.inl  Branch.cpp  Branch.inl  Control.cpp  Control.inl  DataTransfer.cpp  DataTransfer.inl  Logic.cpp  Shift.cpp  Shift.inl
src/Frontend/: CMakeLists.txt  debugger.cpp  debugger.h  frontend.cpp  interface.h
src/Frontend/widgets/: disasm.h  disassemble.c  disassembly_viewer.h  image_manager.h  menubar.cpp  menubar.h  palette_viewer.h
